[1.32] sync - openssh/list.html

--- a/openssh/list.html
+++ b/openssh/list.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang=en>
+<html lang=ru>
 <meta charset=utf-8>
 
-<title>OpenSSH: Mailing Lists</title>
+<title>OpenSSH: Почтовые рассылки</title>
 <meta name="description" content="OpenSSH mailing lists">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://www.openssh.com/lists.html">
@@ -11,78 +11,74 @@
 <h2 id=OpenBSD>
 <a href="/">
 <i>Open</i><b>SSH</b></a>
-Mailing Lists
+Почтовые рассылки
 </h2>
 <hr>
 
-<h2>Developers private list</h2>
+<h2>Рассылка для разработчиков (private)</h2>
 
 <p>
-Security-related issues may be sent to the private list <a
-href="mailto:openssh@openssh.com">openssh@openssh.com</a> which is
-read only by the OpenSSH developers.  It is not appropriate for general
-enquiries; see below for more appropriate places for those.
+Связанные с безопасностью вопросы могут быть направлены в закрытую
+от посторонних глаз рассылку
+<a href="mailto:openssh@openssh.com">openssh@openssh.com</a>, которая
+предназначена только для OpenSSH разработчиков. Она не подходит для
+обсуждения общих вопросов.
 
-<h2>Announcement list</h2>
+<h2>Новостная рассылка</h2>
 
 <p>
-The Linux/Unix port of OpenSSH has a read-only mailing list
+Для Linux/Unix порта есть своя почтовая рассылка
 <a href="mailto:openssh-unix-announce@mindrot.org">
 openssh-unix-announce@mindrot.org</a>.
-This list carries announcements of updated versions and related software.
-This list is closed for public posting and is very low-volume.
+Эта рассылка доступна только для чтения, трафик тут очень низкий.
+Предназначена в первую очередь для анонсов.
 
 <p>
-Information on subscription and list account management may be found
-<a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-announce"
-> here</a>.
+Информация о настройках и о том, как подписатья, доступна
+<a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-announce">тут</a>.
 
-<h2>Developers public list</h2>
-
-<p>
-The <a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-dev"
->openssh-unix-dev</a> list (<a href="mailto:openssh-unix-dev@mindrot.org"
->openssh-unix-dev@mindrot.org</a>) is for the discussions relating to
-the development of both the portable and OpenBSD version of OpenSSH.
+<h2>Рассылка для разработчиков (public)</h2>
 
 <p>
-Traffic is light to moderate (zero to twenty messages per day). Valid
-subjects are the development of OpenSSH (both portable and OpenBSD
-versions), documentation and troubleshooting (assuming you have read
-the manual). HTML, "rich text" formatted email and large attachments are
-<strong>NOT PERMITTED</strong>.
-Posting requests for help which demonstrate your
-lack of familiarity with the basic documentation is likely to result in
-only "RTFM" responses, so please check it first.
+Почтовая рассылка
+<a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-dev">openssh-unix-dev</a>
+(<a href="mailto:openssh-unix-dev@mindrot.org">openssh-unix-dev@mindrot.org</a>)
+посвящена разработке обоих версий OpenSSH.
 
 <p>
-Discussion of commercial products is <strong>*off topic*</strong>
-for this mailing list,
-except when it arises in the context of OpenSSH development
-(e.g. discussing interoperability).
+Трафик рассылки от нуля до двадцать писем в день. Основня (единственная разжешенная)
+тема - хакинг обоих версий OpenSSH (портированная и для OpenBSD), работа над
+документацией и обсуждение и/или исправление багов (если вы читали руководства).
+<strong>НЕ РАЗРЕШАЕТСЯ:</strong> HTML, перегруженный форматированием текст и
+большие по размеру attachments. Разрешается прикреплять только небольшие (например
+diff) файлы. Ваши просьбы о помощи, которые демонстрируют недостаточное знакомство
+с OpenSSH может привести только к "RTFM"-ответам, поэтому, пожалуйста, прежде чем
+что-либо спросить, ознакомтесь с документацией.
 
 <p>
-The list is open to non-subscribers although they may be subject to
-a one-time address validation.  Small attachments (such as diff files)
-are acceptable within the bounds of common sense. The list is <a
-href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">archived
-by MARC</a>.
+Обсуждения коммерческих продуктов в этой рассылке являются
+<strong>*оффтопом*</strong>, за исключением тех случав, когда речь идет о
+разработке OpenSSH (обсуждение взаимодействия).
 
 <p>
-More information on subscription and list account management may be found
-at the <a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-dev"
->openssh-unix-dev@mindrot.org information page</a>.
+Список открыт для всех, хотя non-subscribers могут быть целью для одноразовых
+проверок адреса. Архив доступен на
+<a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">MARC</a>.
+
+<p>
+Более подробная информация об этой рассылке находится на
+<a href="https://lists.mindrot.org/mailman/listinfo/openssh-unix-dev"
+>странице openssh-unix-dev@mindrot.org</a>.
 
 <h2>Newsgroup</h2>
 
 <p>
-General support (especially regarding interoperability issues)
-may also be found at the newsgroup
+Основня поддержка (особенно в отношении проблем совместимости), можно
+найти в соответствующей newsgroup
 <a href="news:comp.security.ssh">comp.security.ssh</a>.
 
-<h2>General SSH user discussion list</h2>
+<h2>Основная рассылка пользователей SSH</h2>
 
 <p>
-The archive of the former secureshell@securityfocus.com list at
-<a href="https://marc.info/?l=secure-shell&amp;r=1&amp;w=2">
-MARC</a> may provide additional historical information.
+Архив рассылки secureshell@securityfocus.com доступен на
+<a href="https://marc.info/?l=secure-shell&amp;r=1&amp;w=2">MARC</a>.
