[1.347] update link to list.html - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -26,7 +26,7 @@
       <ul>
         <li><a href="manual.html">Руководства</a>
         <li><a href="report.html">Сообщить об ошибке</a>
-        <li><a href="https://www.openssh.com/list.html">Почтовая рассылка</a>
+        <li><a href="list.html">Почтовая рассылка</a>
         <li><a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a>
       </ul>
 
