[1.43] sync - faq/ports/testing.html

--- a/faq/ports/testing.html
+++ b/faq/ports/testing.html
@@ -271,7 +271,8 @@ Warnings касательно <a href="https://man.openbsd.org/tmpnam">tmpnam(3)
 должна быть предоставлена. Есть инструменты, которые могут помочь в на
 этом этапе, например
 <a href="https://man.openbsd.org/portslogger">portslogger(1)</a>, который
-похож на «интеллигентный tee(1)», который перенаправляет вывод в log-файл.
+похож на «интеллигентный <a href="https://man.openbsd.org/tee">tee(1)</a>»,
+который перенаправляет вывод в log-файл.
 
 <p>
 Пример:
