[1.166] sync - mail.html

--- a/mail.html
+++ b/mail.html
@@ -245,7 +245,7 @@ LibreSSL.
 
 <p>
 Обсуждения в этих почтовых рассылках сосредаточенны на пользовательских
-проблемах и разработке для конкретных аппаратных архитектур (платформ).
+проблемах и разработке для конкретных <a href=plat.html>платформ</a>.
 
 <dl>
 <dt><b>alpha@openbsd.org</b>
@@ -299,14 +299,15 @@ LibreSSL.
 
 <dl>
 <dt><b>source-changes@openbsd.org</b>
-<dd>На этот адреc приходят письма после коммитов в src, xenocara и
-www репозитории.
+<dd>На этот адреc приходят письма после коммитов в <code>src</code>,
+<code>xenocara</code> и <code>www</code>репозитории.
 <br>
 (<a href="https://marc.info/?l=openbsd-cvs">Архив</a>)
 <p>
 
 <dt><b>ports-changes@openbsd.org</b>
-<dd>На этот адреc приходят письма после коммитов в ports репозиторий.
+<dd>На этот адреc приходят письма после коммитов в <code>ports</code>
+репозиторий.
 <br>
 (<a href="https://marc.info/?l=openbsd-ports-cvs">Архив</a>)
 
@@ -418,7 +419,7 @@ Majordomo достаточно интеллигентен, чтобы распа
 <p>
 На <a href="https://www.benzedrine.ch/mailinglist.html">benzedrine.cx</a>
 есть почтовая рассылка, посвященная <b>pf</b>, для пользователей, использующих
-packet filter в OpenBSD.
+<a href=faq/pf/index.html>OpenBSD packet filter</a>.
 Чтобы подписаться, отправте письмо с текстом "subscribe" в теле письма на адрес
 <a href="mailto:pf-request@benzedrine.ch">pf-request@benzedrine.ch</a>.
 
