[1.97] 3.0.0 release - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -55,7 +55,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последней стабильной версией является 2.9.2<br>
+    Последней разрабатываемым релизом является 3.0.0<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
