[1.97] sync - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -55,7 +55,8 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последней разрабатываемым релизом является 3.0.0<br>
+    Последним стабильным релизом является 2.9.2.<br>
+    Последним разрабатываемым релизом является 3.0.0.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
