--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -42,8 +42,8 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="announces/release-6.4.1.txt">OpenSMTPD 6.4</a> состоялся 16 декабря 2018 года
-	(последнее minor обновление: 2 августа 2019)<br>
+        Релиз <a href="https://opensmtpd.org/announces/release-6.4.1.txt">OpenSMTPD 6.4</a>
+        состоялся 16 декабря 2018 года (последнее minor обновление: 2 августа 2019)<br>
         <a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2.tar.gz">OpenBSD версия</a>
         [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2.sum.sig">sha256</a>] &ndash;
         <a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2p1.tar.gz">Портированная версия</a>
