--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -144,14 +144,14 @@ hw.disknames=wd0:bfb4775bb8397569,cd0:,wd1:56845c8da732ee7b,wd2:f18e359c8fa2522b
 
 <h2 id="fdisk">Использование fdisk</h2>
 
-The <a href="https://man.openbsd.org/fdisk">fdisk(8)</a> utility is used on some
-platforms (i386, amd64 and macppc) to create a partition recognized by the
-system boot ROM.
-Normally, only one OpenBSD fdisk partition will be placed on a disk and that
-partition will then be subdivided into disklabel partitions.
+Утилита <a href="https://man.openbsd.org/fdisk">fdisk(8)</a> обычно используется
+на некоторых платформах (i386, amd64 и macppc) с целью создания разделов,
+распознаваемых boot ROM системы.
+Обычно только один fdisk раздел OpenBSD создается на диске. Внутри этого раздела
+затем создаются disklabel разделы.
 
 <p>
-View your partition table with:
+Увидеть таблицу разделов на диске можно так:
 
 <pre class="cmdbox">
 # <b>fdisk sd0</b>
@@ -166,23 +166,23 @@ Offset: 0       Signature: 0xAA55
 *3: A6    3   0  1 -  552 254 63 [       48195:     8835750 ] OpenBSD
 </pre>
 
-Here, the OpenBSD partition (id <code>A6</code>) is marked with a <code>*</code>
-to indicate that it is the bootable partition.
+Тут раздел с OpenBSD (id <code>A6</code>) помечен при помощи символа <code>*</code>.
+Это говорит о том, что это загрузочный раздел (bootable partition).
 
 <p>
-A totally blank disk will need to have the master boot record's boot code
-written to the disk before it can boot.
-Normally, all you need to do is:
+На полностью чистом диске должен быть boot code в MBR (master boot record), прежде
+чем его можно будет использовать для загрузки.
+Обычно все, что вам нужно сделать для его создания, это:
 
 <pre class="cmdbox">
 # <b>fdisk -iy sd0</b>
 </pre>
 
-Alternatively, use the <code>reinit</code> or <code>update</code> commands in
-interactive mode.
+В качестве альтернативы, используйте команды <code>reinit</code> или
+<code>update</code> в интерактивном режиме.
 
 <p>
-The <code>-e</code> flag starts interactive editing mode:
+При помощи <code>-e</code> можно активировать интерактивный режим редактирования:
 
 <pre class="cmdbox">
 # <b>fdisk -e sd0</b>
@@ -190,66 +190,65 @@ Enter 'help' for information
 fdisk: 1>
 </pre>
 
-Beware that <code>q</code> saves changes and exits the program, while
-<code>x</code> exits without saving.
-This is the opposite of what many people are now used to in other environments.
-Note also that fdisk does not warn before saving the changes.
+Помните, что <code>q</code> сохраняет изменения и выходит из программы, а <code>x</code>
+выходит без сохранения.
+Это противоположно тому, к чему многие из нас привыкли. Также обратите внимание, что
+fdisk не предупреждает перед сохранением изменений.
 
 <p>
-If your system has a maintenance or diagnostic partition, it is recommended that
-you leave it in place or install it <b>before</b> installing OpenBSD.
+Если в вашей системе вы специально создали раздел для maintenance или диагностики,
+рекомендуется его не трогать или создать его <b>перед</b> установкой OpenBSD.
 
 <h2 id="disklabel">Использование disklabel</h2>
 
-Disk labels are used to manage OpenBSD filesystem partitions.
-They contain certain details about your disk, such as drive geometry and
-filesystem information, as described in depth in the
-<a href="https://man.openbsd.org/disklabel.5">disklabel(5)</a> man page.
-Use the <a href="https://man.openbsd.org/disklabel">disklabel(8)</a> command
-to edit the labels.
+Метки диска (disk labels) используются для управления разделами файловой системы OpenBSD.
+Они содержат информацию о вашем диске, такие как геометрия диска и информация
+о файловой системе, как подробно описано в
+<a href="https://man.openbsd.org/disklabel.5">disklabel(5)</a>.
+Используйте команду <a href="https://man.openbsd.org/disklabel">disklabel(8)</a> для
+редактирования меток (to edit the labels).
 
 <p>
-This can help overcome some architectures' disk partitioning limitations.
-For example, on i386, there are only four primary MBR partitions available.
-With disk labels, one of these primary partitions contains all your OpenBSD
-partitions, while the other three are still available for other operating
-systems.
+Это может помочь преодолеть ограничения на количество разделов на диске на некоторых
+архитектурах.
+Например, на i386 доступно только четыре основных раздела MBR. При помощи disk labels
+один из этих основных разделов будет содержит все ваши разделы OpenBSD, а остальные три
+могут использоваться другими операционными системами.
 
 <p>
-On platforms using fdisk, you should leave the first logical track unused, both
-in disklabel and in fdisk.
-For this reason, the default is to start the first partition at block 64.
+На платформах, использующих fdisk, вы должны оставить первую логическую дорожку
+(first logical track) неиспользованной ни disklabel ни fdisk.
+По этой причине, по умолчанию первый раздел начинается с блока 64.
 
 <p>
-Don't put swap at the very beginning of your disk on sparc64.
-While Solaris often did that, OpenBSD requires the boot partition to be at the
-beginning of the disk.
+Не устанавливайте swap в самом начале вашего диска на sparc64.
+В то время как Solaris часто это делал, OpenBSD требует, чтобы именно загрузочный
+раздел находился в начале диска.
 
-<h3>Recovering Partitions After Deleting the Disk Label</h3>
+<h3>Восстановление разделов после удаления метки диска (Disk Label)</h3>
 
-If you have a damaged partition table, there are various things you can attempt
-to do to recover it.
-
-<p>
-A copy of the disklabel for each disk is saved in <code>/var/backups</code> as
-part of the daily system maintenance.
-Assuming you still have the <code>/var</code> partition, you can simply read the
-output, and put it back into disklabel with the <code>-R</code> flag.
+Если у вас поврежденна таблица разделов, ее можно попытаться восстановить.
 
 <p>
-In the event that you can no longer see that partition, there are two options:
-Fix enough of the disk so you can see it, or fix enough of the disk so that you
-can get your data off.
-The <a href="https://man.openbsd.org/scan_ffs">scan_ffs(8)</a> utility will look
-through a disk to find partitions.
-You can use the information it finds to recreate the disklabel.
-If you just want <code>/var</code> back, you can recreate the partition for
-<code>/var</code>, then recover the backed up label and add the rest from that.
-The <a href="https://man.openbsd.org/disklabel">disklabel(8)</a> utility will
-both update the kernel's understanding of the disklabel and attempt to write
-the label to disk.
-Therefore, even if the area of the disk containing the disklabel is unreadable,
-you will be able to mount until the next reboot.
+Копия disklabel для каждого диска сохраняется в <code>/var/backups</code> как
+часть ежедневного system maintenance.
+Если у вас все все еще есть раздел <code>/var</code>, вы можете просто считать
+вывод и поместить его обратно в disklabel при помощи флага <code>-R</code>.
+
+<p>
+Если же вы больше не имеете доступа к этому разделу, остается еще два варианта:
+восстановить достаточно данных на диске, чтобы можно было снова увидеть этот
+раздел или чтобы вы могли по крайней мере извлечь оттуда свои данные.
+Утилита <a href="https://man.openbsd.org/scan_ffs">scan_ffs(8)</a> просматривает
+диск, с целью поиска разделов на нем.
+Вы можете использовать найденную информацию для воссоздания метки диска (recreate
+the disklabel).
+Если вы просто хотите вернуть <code>/var</code>, вы можете заново создать раздел
+для <code>/var</code>, затем восстановить backup метки и добавить оставшуюся часть.
+Утилита <a href="https://man.openbsd.org/disklabel">disklabel(8)</a> поможет ядру
+распознать disklabel и попытается записать метку на диск.
+Поэтому, даже если область диска, содержащая disklabel, не читается, вы сможете
+подмонтировать ее и испрользовать до следующей перезагрузки.
 
 <h2 id="BootAmd64">Процесс загрузки в amd64</h2>
 
