--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -23,7 +23,7 @@
 
       <h1>Для OpenBSD</h1>
       <ul>
-        <li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+        <li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
         <li><a href="https://cvsweb.openbsd.org/src/usr.sbin/smtpd/">CVSWeb</a>
       </ul>
 
