--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -20,7 +20,7 @@
       </ul>
       <h1>Для OpenBSD</h1>
       <ul>
-        <li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+        <li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
         <li><a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a>
       </ul>
       <h1>Для других ОС</h1>
