[1.347] update link to anaoncvs.html - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -33,7 +33,7 @@
       <h1>Для OpenBSD</h1>
       <ul>
         <li><a href="https://www.openssh.com/openbsd.html">FTP</a>
-        <li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+        <li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
         <li><a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a>
       </ul>
 
