--- a/openssh/index.html
+++ b/openssh/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="goals.html">Цели проекта</a>
         <li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
-        <li><a href="https://www.openssh.com/history.html">История</a>
+        <li><a href="history.html">История</a>
         <li><a href="features.html">Возможности</a>
         <li><a href="https://www.openssh.com/security.html">Безопасность</a>
         <li><a href="specs.html">Спецификации</a>
