[1.52] sync - openssh/history.html

--- a/openssh/history.html
+++ b/openssh/history.html
@@ -15,8 +15,9 @@
 <hr>
 
 <p>
-In 1999, some OpenBSD developers set to the task of freeing SSH, cleaning
-up the license mess, and maintaining the codebase towards the future.
+В 1999 году некоторые разработчики OpenBSD поставили перед собой задачу
+сделать SSH открытой и свободной для всех, включая использование
+соответствующей лицензии, а также поддерживать код, создаваемой реализации.
 
 <p>
 OpenSSH основан на свободной версии SSH 1.2.12 от Tatu Yl&ouml;nen.
