--- a/openssh/history.html
+++ b/openssh/history.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
 <h2 id=OpenBSD>
-<a href="/">
+<a href="index.html">
 <i>Open</i><b>SSH</b></a>
 История проекта
 </h2>
