--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
 <h2 id=OpenBSD>
-<a href="/">
+<a href="index.html">
 <i>Open</i><b>SSH</b></a>
 Цели проекта
 </h2>
