[1.34] sync - openssh/goals.html

--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Наша задача проста: Так как telnet и rlogin небезопасны,
+Наша задача проста: так как telnet и rlogin небезопасны,
 все операционные системы должны поставляться с поддержкой
 протокола SSH.
 
